@@ -83,6 +83,7 @@ SubVersion: $Id$
 	- [kevin] $1832: allow setting $RC to something other than windres
 	- [kevin] $1833: override C_INCLUDE_PATH and LIBRARY_PATH for cleaner.c compilation
 	- [kevin] $1835: add .exe extension properly for MinGW (especially cross-MinGW) builds
+	- [kevin] $1843: add install-without-tcl-tk-itcl make target
 	
 	Note: trunk forked into tiemu-debugging-branch at rev. $983 and has been merged back 
 		into the trunk at rev. $1695.	
